tests/ui/argument-suggestions/issue-98894.stderr
error[E0057]: this function takes 2 arguments but 1 argument was supplied
  --> $DIR/issue-98894.rs:2:5
   |
LL |     (|_, ()| ())(if true {} else {return;});
   |     ^^^^^^^^^^^^--------------------------- argument #2 of type `()` is missing
   |
note: closure defined here
  --> $DIR/issue-98894.rs:2:6
   |
LL |     (|_, ()| ())(if true {} else {return;});
   |      ^^^^^^^
help: provide the argument
   |
LL |     (|_, ()| ())(if true {} else {return;}, ());
   |                                           ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0057`.
